CompiladorDeAcrobat/src/compiladorAcrobatParser.java
// Generated from compiladorAcrobat.g4 by ANTLR 4.7.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class compiladorAcrobatParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, DEC=4, ALG=5, MAIN=6, TYPE=7, IN=8, OUT=9, TRUE=10, 
		FALSE=11, ARROW=12, OP=13, CP=14, OB=15, CB=16, ASGN=17, VAR=18, NUM=19, 
		STR=20, DELIM=21, COMMA=22, COMMENT=23, OP_ARIT=24, OP_COMP=25, OP_LOGI=26, 
		COND=27, LOOP=28, RTN=29, FUNC=30, NFUNC=31, WS=32, ErrorChar=33;
	public static final int
		RULE_inicio = 0, RULE_declaracoes = 1, RULE_algoritmo = 2, RULE_funcao = 3, 
		RULE_funcaoChamada = 4, RULE_parametros = 5, RULE_parametrosChamada = 6, 
		RULE_valorRestrito = 7, RULE_valor = 8, RULE_corpoFunc = 9, RULE_instrucao = 10, 
		RULE_escrita = 11, RULE_leitura = 12, RULE_atribuicao = 13, RULE_compIF = 14, 
		RULE_compELIF = 15, RULE_compELSE = 16, RULE_repeticao = 17, RULE_retorno = 18, 
		RULE_condicao = 19, RULE_operacao = 20, RULE_operando = 21, RULE_operacao_cauda = 22, 
		RULE_principal = 23;
	private static String[] makeRuleNames() {
		return new String[] {
			"inicio", "declaracoes", "algoritmo", "funcao", "funcaoChamada", "parametros", 
			"parametrosChamada", "valorRestrito", "valor", "corpoFunc", "instrucao", 
			"escrita", "leitura", "atribuicao", "compIF", "compELIF", "compELSE", 
			"repeticao", "retorno", "condicao", "operacao", "operando", "operacao_cauda", 
			"principal"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'IF'", "'ELSE IF'", "'ELSE'", "'DECLARATIONS'", "'ALGORITHM'", 
			"'MAIN'", null, "'JACKIN'", "'JACKOUT'", "'TRUE'", "'FALSE'", "'<-'", 
			"'('", "')'", "'{'", "'}'", "'ASSIGN'", null, null, null, "';'", "','", 
			null, null, null, null, null, "'WHILE'", "'RETURN'", "'FUNCTION'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, "DEC", "ALG", "MAIN", "TYPE", "IN", "OUT", "TRUE", 
			"FALSE", "ARROW", "OP", "CP", "OB", "CB", "ASGN", "VAR", "NUM", "STR", 
			"DELIM", "COMMA", "COMMENT", "OP_ARIT", "OP_COMP", "OP_LOGI", "COND", 
			"LOOP", "RTN", "FUNC", "NFUNC", "WS", "ErrorChar"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "compiladorAcrobat.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public compiladorAcrobatParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class InicioContext extends ParserRuleContext {
		public InicioContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_inicio; }
	 
		public InicioContext() { }
		public void copyFrom(InicioContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class NInicioContext extends InicioContext {
		public DeclaracoesContext declaracoes() {
			return getRuleContext(DeclaracoesContext.class,0);
		}
		public AlgoritmoContext algoritmo() {
			return getRuleContext(AlgoritmoContext.class,0);
		}
		public TerminalNode EOF() { return getToken(compiladorAcrobatParser.EOF, 0); }
		public NInicioContext(InicioContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof compiladorAcrobatListener ) ((compiladorAcrobatListener)listener).enterNInicio(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof compiladorAcrobatListener ) ((compiladorAcrobatListener)listener).exitNInicio(this);
		}
	}

	public final InicioContext inicio() throws RecognitionException {
		InicioContext _localctx = new InicioContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_inicio);
		try {
			_localctx = new NInicioContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(48);
			declaracoes();
			setState(49);
			algoritmo();
			setState(50);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclaracoesContext extends ParserRuleContext {
		public DeclaracoesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracoes; }
	 
		public DeclaracoesContext() { }
		public void copyFrom(DeclaracoesContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class BlocoDeclaracaoContext extends DeclaracoesContext {
		public TerminalNode DEC() { return getToken(compiladorAcrobatParser.DEC, 0); }
		public List<TerminalNode> TYPE() { return getTokens(compiladorAcrobatParser.TYPE); }
		public TerminalNode TYPE(int i) {
			return getToken(compiladorAcrobatParser.TYPE, i);
		}
		public List<TerminalNode> VAR() { return getTokens(compiladorAcrobatParser.VAR); }
		public TerminalNode VAR(int i) {
			return getToken(compiladorAcrobatParser.VAR, i);
		}
		public List<TerminalNode> DELIM() { return getTokens(compiladorAcrobatParser.DELIM); }
		public TerminalNode DELIM(int i) {
			return getToken(compiladorAcrobatParser.DELIM, i);
		}
		public BlocoDeclaracaoContext(DeclaracoesContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof compiladorAcrobatListener ) ((compiladorAcrobatListener)listener).enterBlocoDeclaracao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof compiladorAcrobatListener ) ((compiladorAcrobatListener)listener).exitBlocoDeclaracao(this);
		}
	}

	public final DeclaracoesContext declaracoes() throws RecognitionException {
		DeclaracoesContext _localctx = new DeclaracoesContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_declaracoes);
		int _la;
		try {
			_localctx = new BlocoDeclaracaoContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(52);
			match(DEC);
			setState(58);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==TYPE) {
				{
				{
				setState(53);
				match(TYPE);
				setState(54);
				match(VAR);
				setState(55);
				match(DELIM);
				}
				}
				setState(60);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AlgoritmoContext extends ParserRuleContext {
		public AlgoritmoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_algoritmo; }
	 
		public AlgoritmoContext() { }
		public void copyFrom(AlgoritmoContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class BlocoAlgoritmoContext extends AlgoritmoContext {
		public TerminalNode ALG() { return getToken(compiladorAcrobatParser.ALG, 0); }
		public PrincipalContext principal() {
			return getRuleContext(PrincipalContext.class,0);
		}
		public List<FuncaoContext> funcao() {
			return getRuleContexts(FuncaoContext.class);
		}
		public FuncaoContext funcao(int i) {
			return getRuleContext(FuncaoContext.class,i);
		}
		public BlocoAlgoritmoContext(AlgoritmoContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof compiladorAcrobatListener ) ((compiladorAcrobatListener)listener).enterBlocoAlgoritmo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof compiladorAcrobatListener ) ((compiladorAcrobatListener)listener).exitBlocoAlgoritmo(this);
		}
	}

	public final AlgoritmoContext algoritmo() throws RecognitionException {
		AlgoritmoContext _localctx = new AlgoritmoContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_algoritmo);
		int _la;
		try {
			_localctx = new BlocoAlgoritmoContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(61);
			match(ALG);
			setState(65);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==FUNC) {
				{
				{
				setState(62);
				funcao();
				}
				}
				setState(67);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(68);
			principal();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncaoContext extends ParserRuleContext {
		public FuncaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcao; }
	 
		public FuncaoContext() { }
		public void copyFrom(FuncaoContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class BlocoFuncaoContext extends FuncaoContext {
		public TerminalNode FUNC() { return getToken(compiladorAcrobatParser.FUNC, 0); }
		public TerminalNode TYPE() { return getToken(compiladorAcrobatParser.TYPE, 0); }
		public TerminalNode NFUNC() { return getToken(compiladorAcrobatParser.NFUNC, 0); }
		public TerminalNode OP() { return getToken(compiladorAcrobatParser.OP, 0); }
		public ParametrosContext parametros() {
			return getRuleContext(ParametrosContext.class,0);
		}
		public TerminalNode CP() { return getToken(compiladorAcrobatParser.CP, 0); }
		public TerminalNode OB() { return getToken(compiladorAcrobatParser.OB, 0); }
		public CorpoFuncContext corpoFunc() { return getRuleContext(CorpoFuncContext.class,0); }
		public TerminalNode CB() { return getToken(compiladorAcrobatParser.CB, 0); }
		public BlocoFuncaoContext(FuncaoContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof compiladorAcrobatListener ) ((compiladorAcrobatListener)listener).enterBlocoFuncao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof compiladorAcrobatListener ) ((compiladorAcrobatListener)listener).exitBlocoFuncao(this);
		}
	}

	public final FuncaoContext funcao() throws RecognitionException {
		FuncaoContext _localctx = new FuncaoContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_funcao);
		try {
			_localctx = new BlocoFuncaoContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(70);
			match(FUNC);
			setState(71);
			match(TYPE);
			setState(72);
			match(NFUNC);
			setState(73);
			match(OP);
			setState(74);
			parametros();
			setState(75);
			match(CP);
			setState(76);
			match(OB);
			setState(77);
			corpoFunc();
			setState(78);
			match(CB);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncaoChamadaContext extends ParserRuleContext {
		public FuncaoChamadaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcaoChamada; }
	 
		public FuncaoChamadaContext() { }
		public void copyFrom(FuncaoChamadaContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class NFuncaoChamadaContext extends FuncaoChamadaContext {
		public TerminalNode NFUNC() { return getToken(compiladorAcrobatParser.NFUNC, 0); }
		public TerminalNode OP() { return getToken(compiladorAcrobatParser.OP, 0); }
		public ParametrosChamadaContext parametrosChamada() {
			return getRuleContext(ParametrosChamadaContext.class,0);
		}
		public TerminalNode CP() { return getToken(compiladorAcrobatParser.CP, 0); }
		public NFuncaoChamadaContext(FuncaoChamadaContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof compiladorAcrobatListener ) ((compiladorAcrobatListener)listener).enterNFuncaoChamada(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof compiladorAcrobatListener ) ((compiladorAcrobatListener)listener).exitNFuncaoChamada(this);
		}
	}

	public final FuncaoChamadaContext funcaoChamada() throws RecognitionException {
		FuncaoChamadaContext _localctx = new FuncaoChamadaContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_funcaoChamada);
		try {
			_localctx = new NFuncaoChamadaContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			match(NFUNC);
			setState(81);
			match(OP);
			setState(82);
			parametrosChamada();
			setState(83);
			match(CP);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParametrosContext extends ParserRuleContext {
		public ParametrosContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parametros; }
	 
		public ParametrosContext() { }
		public void copyFrom(ParametrosContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class NParametrosContext extends ParametrosContext {
		public TerminalNode TYPE() { return getToken(compiladorAcrobatParser.TYPE, 0); }
		public TerminalNode VAR() { return getToken(compiladorAcrobatParser.VAR, 0); }
		public TerminalNode COMMA() { return getToken(compiladorAcrobatParser.COMMA, 0); }
		public ParametrosContext parametros() {
			return getRuleContext(ParametrosContext.class,0);
		}
		public NParametrosContext(ParametrosContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof compiladorAcrobatListener ) ((compiladorAcrobatListener)listener).enterNParametros(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof compiladorAcrobatListener ) ((compiladorAcrobatListener)listener).exitNParametros(this);
		}
	}

	public final ParametrosContext parametros() throws RecognitionException {
		ParametrosContext _localctx = new ParametrosContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_parametros);
		int _la;
		try {
			_localctx = new NParametrosContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(93);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				{
				setState(85);
				match(TYPE);
				setState(86);
				match(VAR);
				setState(87);
				match(COMMA);
				setState(88);
				parametros();
				}
				break;
			case 2:
				{
				setState(89);
				match(TYPE);
				setState(91);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==VAR) {
					{
					setState(90);
					match(VAR);
					}
				}

				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParametrosChamadaContext extends ParserRuleContext {
		public ParametrosChamadaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parametrosChamada; }
	 
		public ParametrosChamadaContext() { }
		public void copyFrom(ParametrosChamadaContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class NParametrosChamadaContext extends ParametrosChamadaContext {
		public TerminalNode COMMA() { return getToken(compiladorAcrobatParser.COMMA, 0); }
		public ParametrosChamadaContext parametrosChamada() {
			return getRuleContext(ParametrosChamadaContext.class,0);
		}
		public ValorContext valor() {
			return getRuleContext(ValorContext.class,0);
		}
		public NParametrosChamadaContext(ParametrosChamadaContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof compiladorAcrobatListener ) ((compiladorAcrobatListener)listener).enterNParametrosChamada(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof compiladorAcrobatListener ) ((compiladorAcrobatListener)listener).exitNParametrosChamada(this);
		}
	}

	public final ParametrosChamadaContext parametrosChamada() throws RecognitionException {
		ParametrosChamadaContext _localctx = new ParametrosChamadaContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_parametrosChamada);
		try {
			_localctx = new NParametrosChamadaContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				{
				{
				setState(95);
				valor();
				}
				setState(96);
				match(COMMA);
				setState(97);
				parametrosChamada();
				}
				break;
			case 2:
				{
				{
				setState(99);
				valor();
				}
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ValorRestritoContext extends ParserRuleContext {
		public ValorRestritoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_valorRestrito; }
	 
		public ValorRestritoContext() { }
		public void copyFrom(ValorRestritoContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class NValorRestritoContext extends ValorRestritoContext {
		public TerminalNode VAR() { return getToken(compiladorAcrobatParser.VAR, 0); }
		public TerminalNode NUM() { return getToken(compiladorAcrobatParser.NUM, 0); }
		public TerminalNode STR() { return getToken(compiladorAcrobatParser.STR, 0); }
		public TerminalNode TRUE() { return getToken(compiladorAcrobatParser.TRUE, 0); }
		public TerminalNode FALSE() { return getToken(compiladorAcrobatParser.FALSE, 0); }
		public NValorRestritoContext(ValorRestritoContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof compiladorAcrobatListener ) ((compiladorAcrobatListener)listener).enterNValorRestrito(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof compiladorAcrobatListener ) ((compiladorAcrobatListener)listener).exitNValorRestrito(this);
		}
	}

	public final ValorRestritoContext valorRestrito() throws RecognitionException {
		ValorRestritoContext _localctx = new ValorRestritoContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_valorRestrito);
		int _la;
		try {
			_localctx = new NValorRestritoContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << TRUE) | (1L << FALSE) | (1L << VAR) | (1L << NUM) | (1L << STR))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ValorContext extends ParserRuleContext {
		public ValorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_valor; }
	 
		public ValorContext() { }
		public void copyFrom(ValorContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class NValorContext extends ValorContext {
		public ValorRestritoContext valorRestrito() {
			return getRuleContext(ValorRestritoContext.class,0);
		}
		public OperacaoContext operacao() {
			return getRuleContext(OperacaoContext.class,0);
		}
		public FuncaoChamadaContext funcaoChamada() {
			return getRuleContext(FuncaoChamadaContext.class,0);
		}
		public NValorContext(ValorContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof compiladorAcrobatListener ) ((compiladorAcrobatListener)listener).enterNValor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof compiladorAcrobatListener ) ((compiladorAcrobatListener)listener).exitNValor(this);
		}
	}

	public final ValorContext valor() throws RecognitionException {
		ValorContext _localctx = new ValorContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_valor);
		try {
			_localctx = new NValorContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				{
				setState(104);
				valorRestrito();
				}
				break;
			case 2:
				{
				setState(105);
				operacao();
				}
				break;
			case 3:
				{
				setState(106);
				funcaoChamada();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CorpoFuncContext extends ParserRuleContext {
		public CorpoFuncContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_corpoFunc; }
	 
		public CorpoFuncContext() { }
		public void copyFrom(CorpoFuncContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class NCorpoFuncaoContext extends CorpoFuncContext {
		public RetornoContext retorno() {
			return getRuleContext(RetornoContext.class,0);
		}
		public List<InstrucaoContext> instrucao() {
			return getRuleContexts(InstrucaoContext.class);
		}
		public InstrucaoContext instrucao(int i) {
			return getRuleContext(InstrucaoContext.class,i);
		}
		public NCorpoFuncaoContext(CorpoFuncContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof compiladorAcrobatListener ) ((compiladorAcrobatListener)listener).enterNCorpoFuncao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof compiladorAcrobatListener ) ((compiladorAcrobatListener)listener).exitNCorpoFuncao(this);
		}
	}

	public final CorpoFuncContext corpoFunc() throws RecognitionException {
		CorpoFuncContext _localctx = new CorpoFuncContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_corpoFunc);
		int _la;
		try {
			_localctx = new NCorpoFuncaoContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(112);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << IN) | (1L << OUT) | (1L << ASGN) | (1L << LOOP))) != 0)) {
				{
				{
				setState(109);
				instrucao();
				}
				}
				setState(114);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(115);
			retorno();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InstrucaoContext extends ParserRuleContext {
		public InstrucaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instrucao; }
	 
		public InstrucaoContext() { }
		public void copyFrom(InstrucaoContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class NInstrucaoContext extends InstrucaoContext {
		public AtribuicaoContext atribuicao() {
			return getRuleContext(AtribuicaoContext.class,0);
		}
		public LeituraContext leitura() {
			return getRuleContext(LeituraContext.class,0);
		}
		public EscritaContext escrita() {
			return getRuleContext(EscritaContext.class,0);
		}
		public CompIFContext compIF() {
			return getRuleContext(CompIFContext.class,0);
		}
		public RepeticaoContext repeticao() {
			return getRuleContext(RepeticaoContext.class,0);
		}
		public NInstrucaoContext(InstrucaoContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof compiladorAcrobatListener ) ((compiladorAcrobatListener)listener).enterNInstrucao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof compiladorAcrobatListener ) ((compiladorAcrobatListener)listener).exitNInstrucao(this);
		}
	}

	public final InstrucaoContext instrucao() throws RecognitionException {
		InstrucaoContext _localctx = new InstrucaoContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_instrucao);
		try {
			_localctx = new NInstrucaoContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(122);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ASGN:
				{
				setState(117);
				atribuicao();
				}
				break;
			case IN:
				{
				setState(118);
				leitura();
				}
				break;
			case OUT:
				{
				setState(119);
				escrita();
				}
				break;
			case T__0:
				{
				setState(120);
				compIF();
				}
				break;
			case LOOP:
				{
				setState(121);
				repeticao();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EscritaContext extends ParserRuleContext {
		public EscritaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_escrita; }
	 
		public EscritaContext() { }
		public void copyFrom(EscritaContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class NEscritaContext extends EscritaContext {
